--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="styles.css">
   <script src="https://kit.fontawesome.com/1c9ad4b785.js" crossorigin="anonymous"></script>
 
-  <title>ṛ reachOut</title>
+  <title>reachOut</title>
 </head>
 
 <body>
